# synesthetic_screen

./: .gitignore  Cargo.toml
assets/fonts/TJF Optik/: readme.txt
src/: app.rs  colors.yaml  control_panel.rs  main.rs  music.rs  note.rs  settings_window.rs  style.rs  synesthetizer.rs
