[package]
name = "synesthetic_screen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
eframe = { version = "0.25.0", features = ["wgpu"] }
egui = { version = "0.25.0", features = ["serde"] }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
env_logger = "0.11.1"
log = "0.4.20"
kira = "0.8.7"
image = { version = "0.24.8", features = ["png", "jpeg"] }
imageproc = "0.23.0"
ndarray = "0.15.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
spectrum-analyzer = "1.5.0"
symphonia = { version = "0.5.3", features = ["mp3", "alac", "aac"] }
rfd = "0.13.0"

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-codec-aac]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-format-wav]
opt-level = 3

[profile.dev.package.symphonia-format-isomp4]
opt-level = 3
